# image-segmentation

./: .gitignore  Architecture.md  README.md  pyproject.toml
configs/: oxford_pet_unet.yaml
segmentation/: __init__.py
src/segmentation/: __init__.py  config.py  dataset.py  engine.py  evaluate.py  losses.py  metrics.py  model.py  predict.py  train.py  utils.py  visualization.py
tests/: test_config.py  test_dataset.py  test_metrics.py  test_model_and_engine.py  test_predict.py
